==> apache/nuttx/arch/arm/src/stm32l4/stm32l4_iwdg.c <==
#include <nuttx/config.h>
#include <nuttx/arch.h>
#include <stdint.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/clock.h>
#include <nuttx/timers/watchdog.h>
#include <arch/board/board.h>
#include "up_arch.h"
#include "stm32l4_rcc.h"
#include "chip/stm32l4_dbgmcu.h"
#include "stm32l4_wdg.h"
#define IWDG_FMIN       (STM32L4_LSI_FREQUENCY / 256)
#define IWDG_MAXTIMEOUT (1000 * IWDG_RLR_MAX / IWDG_FMIN)
#  define CONFIG_STM32L4_IWDG_DEFTIMOUT IWDG_MAXTIMEOUT
# define        stm32l4_getreg(addr)     getreg16(addr)
# define        stm32l4_putreg(val,addr) putreg16(val,addr)

static inline void stm32l4_setprescaler(FAR struct stm32l4_lowerhalf_s *priv)
{
  irqstate_t flags;

  flags = enter_critical_section();

  /* Enable write access to IWDG_PR and IWDG_RLR registers */

  stm32l4_putreg(IWDG_KR_KEY_ENABLE, STM32L4_IWDG_KR);

  /* Wait for the PVU and RVU bits to be reset by hardware.  These bits
   * were set the last time that the PR register was written and may not
   * yet be cleared.
   */

  while ((stm32l4_getreg(STM32L4_IWDG_SR) & (IWDG_SR_PVU | IWDG_SR_RVU)) != 0);

  /* Set the prescaler */

  stm32l4_putreg((uint16_t)priv->prescaler << IWDG_PR_SHIFT, STM32L4_IWDG_PR);

  /* Set the reload value */

  stm32l4_putreg((uint16_t)priv->reload, STM32L4_IWDG_RLR);

  /* Reload the counter (and disable write access) */

  stm32l4_putreg(IWDG_KR_KEY_RELOAD, STM32L4_IWDG_KR);

  /* Wait for the PVU and RVU bits to be reset by hardware.  This is
   * to wait for the change to take effect before exiting critical section,
   * as we are not allowed to enter any low-power modes while this update is
   * in progress.
   *
   * REVISIT: PVU and RVU don't get cleared as promised, until the IWDG is
   * started by writing IWDG_KR_KEY_START into IWDG_KR, regardless of whether
   * LSI has been started explicitly previously, or not. RM does not document
   * this behavior. Lets hope no low-power mode entry happens in this case
   * during the next up to five RC 40 kHz cycles.
   */

  if (priv->started)
    {
      while ((stm32l4_getreg(STM32L4_IWDG_SR) & (IWDG_SR_PVU | IWDG_SR_RVU)) != 0);
    }

  leave_critical_section(flags);
}

static int stm32l4_start(FAR struct watchdog_lowerhalf_s *lower)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
  irqstate_t flags;

  wdinfo("Entry: started=%d\n");
  DEBUGASSERT(priv);

  /* Have we already been started? */

  if (!priv->started)
    {
      /* Set up prescaler and reload value for the selected timeout before
       * starting the watchdog timer.
       */

      stm32l4_setprescaler(priv);

      /* Enable IWDG (the LSI oscillator will be enabled by hardware).  NOTE:
       * If the "Hardware watchdog" feature is enabled through the device option
       * bits, the watchdog is automatically enabled at power-on.
       */

      flags           = enter_critical_section();
      stm32l4_putreg(IWDG_KR_KEY_START, STM32L4_IWDG_KR);
      priv->lastreset = clock_systimer();
      priv->started   = true;
      leave_critical_section(flags);
    }

  return OK;
}

static int stm32l4_keepalive(FAR struct watchdog_lowerhalf_s *lower)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
  irqstate_t flags;

  wdinfo("Entry\n");

  /* Reload the IWDG timer */

  flags = enter_critical_section();
  stm32l4_putreg(IWDG_KR_KEY_RELOAD, STM32L4_IWDG_KR);
  priv->lastreset = clock_systimer();
  leave_critical_section(flags);

  return OK;
}

static int stm32l4_getstatus(FAR struct watchdog_lowerhalf_s *lower,
                             FAR struct watchdog_status_s *status)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
  uint32_t ticks;
  uint32_t elapsed;

  wdinfo("Entry\n");
  DEBUGASSERT(priv);

  /* Return the status bit */

  status->flags = WDFLAGS_RESET;
  if (priv->started)
    {
      status->flags |= WDFLAGS_ACTIVE;
    }

  /* Return the actual timeout in milliseconds */

  status->timeout = priv->timeout;

  /* Get the elapsed time since the last ping */

  ticks   = clock_systimer() - priv->lastreset;
  elapsed = (int32_t)TICK2MSEC(ticks);

  if (elapsed > priv->timeout)
    {
      elapsed = priv->timeout;
    }

  /* Return the approximate time until the watchdog timer expiration */

  status->timeleft = priv->timeout - elapsed;

  wdinfo("Status     :\n");
  wdinfo("  flags    : %08x\n", status->flags);
  wdinfo("  timeout  : %d\n", status->timeout);
  wdinfo("  timeleft : %d\n", status->timeleft);
  return OK;
}

static int stm32l4_settimeout(FAR struct watchdog_lowerhalf_s *lower,
                              uint32_t timeout)
{
  FAR struct stm32l4_lowerhalf_s *priv = (FAR struct stm32l4_lowerhalf_s *)lower;
  uint32_t fiwdg;
  uint64_t reload;
  int prescaler;
  int shift;

  wdinfo("Entry: timeout=%d\n", timeout);
  DEBUGASSERT(priv);

  /* Can this timeout be represented? */

  if (timeout < 1 || timeout > IWDG_MAXTIMEOUT)
    {
      wderr("ERROR: Cannot represent timeout=%d > %d\n",
            timeout, IWDG_MAXTIMEOUT);
      return -ERANGE;
    }

  /* Select the smallest prescaler that will result in a reload value that is
   * less than the maximum.
   */

  for (prescaler = 0; ; prescaler++)
    {
      /* PR = 0 -> Divider = 4   = 1 << 2
       * PR = 1 -> Divider = 8   = 1 << 3
       * PR = 2 -> Divider = 16  = 1 << 4
       * PR = 3 -> Divider = 32  = 1 << 5
       * PR = 4 -> Divider = 64  = 1 << 6
       * PR = 5 -> Divider = 128 = 1 << 7
       * PR = 6 -> Divider = 256 = 1 << 8
       * PR = n -> Divider       = 1 << (n+2)
       */

      shift = prescaler + 2;

      /* Get the IWDG counter frequency in Hz. For a nominal 32Khz LSI clock,
       * this is value in the range of 7500 and 125.
       */

      fiwdg = priv->lsifreq >> shift;

      /* We want:
       *  1000 * reload / Fiwdg = timeout
       * Or:
       *  reload = Fiwdg * timeout / 1000
       */

      reload = (uint64_t)fiwdg * (uint64_t)timeout / 1000;

      /* If this reload valid is less than the maximum or we are not ready
       * at the prescaler value, then break out of the loop to use these
       * settings.
       */

      if (reload <= IWDG_RLR_MAX || prescaler == 6)
        {
          /* Note that we explicitly break out of the loop rather than using
           * the 'for' loop termination logic because we do not want the
           * value of prescaler to be incremented.
           */

          break;
        }
    }

  /* Make sure that the final reload value is within range */

  if (reload > IWDG_RLR_MAX)
    {
      reload = IWDG_RLR_MAX;
    }

  /* Get the actual timeout value in milliseconds.
   *
   * We have:
   *  reload = Fiwdg * timeout / 1000
   * So we want:
   *  timeout = 1000 * reload / Fiwdg
   */

  priv->timeout = (1000 * (uint32_t)reload) / fiwdg;

  /* Save setup values for later use */

  priv->prescaler = prescaler;
  priv->reload    = reload;

  /* Write the prescaler and reload values to the IWDG registers. */

  if (priv->started)
    {
      stm32l4_setprescaler(priv);
    }

  wdinfo("prescaler=%d fiwdg=%d reload=%d\n", prescaler, fiwdg, reload);

  return OK;
}

void stm32l4_iwdginitialize(FAR const char *devpath, uint32_t lsifreq)
{
  FAR struct stm32l4_lowerhalf_s *priv = &g_wdgdev;
  uint32_t cr;

  wdinfo("Entry: devpath=%s lsifreq=%d\n", devpath, lsifreq);

  /* NOTE we assume that clocking to the IWDG has already been provided by
   * the RCC initialization logic.
   */

  /* Initialize the driver state structure. */

  priv->ops     = &g_wdgops;
  priv->lsifreq = lsifreq;
  priv->started = false;

  /* Make sure that the LSI oscillator is enabled.  NOTE:  The LSI oscillator
   * is enabled here but is not disabled by this file, because this file does
   * not know the global usage of the oscillator.  Any clock management
   * logic (say, as part of a power management scheme) needs handle other
   * LSI controls outside of this file.
   */

  stm32l4_rcc_enablelsi();
  wdinfo("RCC CSR: %08x\n", getreg32(STM32L4_RCC_CSR));

  /* Select an arbitrary initial timeout value.  But don't start the watchdog
   * yet. NOTE: If the "Hardware watchdog" feature is enabled through the
   * device option bits, the watchdog is automatically enabled at power-on.
   */

  stm32l4_settimeout((FAR struct watchdog_lowerhalf_s *)priv, CONFIG_STM32L4_IWDG_DEFTIMOUT);

  /* Register the watchdog driver as /dev/watchdog0 */

  (void)watchdog_register(devpath, (FAR struct watchdog_lowerhalf_s *)priv);

  /* When the microcontroller enters debug mode (Cortex-M4F core halted),
   * the IWDG counter either continues to work normally or stops, depending
   * on DBG_IWDG_STOP configuration bit in DBG module.
   */

  cr = getreg32(STM32_DBGMCU_APB1_FZ);
  cr |= DBGMCU_APB1_IWDGSTOP;
  putreg32(cr, STM32_DBGMCU_APB1_FZ);
}
